# robotics-main

lab1/ex01/: commands.txt
lab2/ex02/: commands.txt
lab2/ex03/my_package/: package.xml  setup.py
lab2/ex04/: colcon_build.txt
lab2/ex05/: rosnode_info.txt  rosnode_list.txt
lab2/ex06/: cmd_vel.txt
lab2/ex08/: rqt_console.txt  three_turtles.py
lab2/ex09/: package.xml
lab2/ex09/install/: local_setup.sh  setup.sh
lab2/ex09/log/: latest_build
lab2/ex09/srv/log/: latest_edit
lab2/ex10/: launch.txt
lab2/ex10/test_to_cmd_vel/: package.xml  setup.cfg  setup.py
lab2/ex10/test_to_cmd_vel/test_to_cmd_vel/: text_to_cmd_vel.py
lab3/ex01/ex09/: CMakeLists.txt
lab3/ex01/service_full_name/: package.xml  setup.py
lab3/ex02/action_turtle_commands/: package.xml  setup.py
lab3/ex02/for_lab3_2/: CMakeLists.txt  package.xml
lab3/ex03/bag_files/: pose_speed_x.yaml  pose_speed_x2.yaml
lab3/ex04/: doctor.txt
lab3/ex05/move_to_goal/: package.xml  setup.py
lab4/ex01/: frames_2024-10-03_14.44.13.gv  last_transform.txt  transform.txt
lab4/ex02/: launch
lab4/ex02/lab4_2/: package.xml  setup.cfg  setup.py
lab4/ex03/: launch
lab4/ex03/lab4_3/: package.xml  setup.cfg  setup.py
lab5/ex01/: launch
lab5/ex01/lab5_1/: package.xml  setup.cfg  setup.py
lab5/ex02/lab5_2/: package.xml  setup.cfg  setup.py
lab5/ex03/: launch_commands
lab5/ex03/lab5_31/: package.xml  setup.cfg  setup.py
lab5/ex03/lab5_31/config/: controllers.yaml
lab5/ex03/lab5_31/lab5_31/: robot_controller.py
lab5/ex03/lab5_31/launch/: robot_gazebo.launch.py
lab5/ex03/lab5_31/urdf/: robot.urdf.xacro
lab5/ex04/: launch_commands
lab5/ex04/lab5_4/: setup.cfg  setup.py
lab6/my_robot/: commands_for_launch
lab6/my_robot/robot_bringup/: CMakeLists.txt
lab6/my_robot/robot_bringup/config/: diff_drive.rviz  diff_drive.rviz saved
lab6/my_robot/robot_bringup/launch/: robot_lidar.launch.py
lab6/my_robot/robot_bringup/robot_bringup/: robot_depth_stop.py  robot_lazer_stop.py
(+82 files in other folders)
