<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lab5_31</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dmitriykil20030310@gmail.com">dmitriy</maintainer>
  <license>TODO: License declaration</license>
  
  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_publisher</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>

  
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
